Huge rewrital of functions. Not all finished, mass modifying attributes added, but is before optimazation. Language system is partially broken for now. It works completely in Hungarian, but because of the changes, the English translation is broken.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Microsoft.ActiveDirectory.Management.dll
 Microsoft.ActiveDirectory.Management.resources.dll
 aduc.ico
+classtest.ps1
+All-In-OU-class.ps1
